--- a/pwp/index.html
+++ b/pwp/index.html
@@ -1288,7 +1288,7 @@
               <div class="text-80 _1">Play agressive</div>
               <div class="frame1">
                 <div class="frame-img1">
-                    <!-- <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
+                    <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
                       data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true"
                       data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom">
                       <video autoplay=""
@@ -1296,14 +1296,14 @@
                         data-wf-ignore="true" data-object-fit="cover">
                         <source src="images/video1.mp4" data-wf-ignore="true">
                         <source src="images/video1.webm" data-wf-ignore="true">
-                      </video></div><img src="images/" loading="eager"
+                      </video></div><img src="images/skill-img-2.jpg" loading="eager"
                       sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw"
-                      srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img"> -->
-                  <video autoplay muted loop>
+                      srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img">
+                  <!-- <video autoplay muted loop>
                     <source src="images/video1.mp4" type="video/mp4">
                         <source src="images/video1.mp4" data-wf-ignore="true">
                         <source src="images/video1.webm" data-wf-ignore="true">
-                  </video>
+                  </video> -->
                 </div>
 
               </div>
@@ -1317,9 +1317,20 @@
               <div class="text-80 _1 _2">pro setup</div>
               <div class="frame1 _4">
                 <div class="frame-img1 _2">
-                  <video autoplay muted loop>
+                    <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
+                      data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true"
+                      data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom">
+                      <video autoplay=""
+                        loop="" style="background-image:url(&quot;videos/movement-min-opt-poster-00001.jpg&quot;)" muted="" playsinline=""
+                        data-wf-ignore="true" data-object-fit="cover">
+                        <source src="images/video2.mp4" data-wf-ignore="true">
+                        <source src="images/video2.webm" data-wf-ignore="true">
+                      </video></div><img src="images/skill-img-2.jpg" loading="eager"
+                      sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw"
+                      srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img">
+                  <!-- <video autoplay muted loop>
                     <source src="images/video2.mp4" type="video/mp4">
-                  </video>
+                  </video> -->
                 </div>
               </div>
             </div>
@@ -1332,9 +1343,20 @@
               <div class="text-80 _1 c3">Advanced Mechanics</div>
               <div class="frame1 _5">
                 <div class="frame-img1 _3">
-                  <video autoplay muted loop>
+                  <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
+                  data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true"
+                  data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom">
+                  <video autoplay=""
+                    loop="" style="background-image:url(&quot;videos/movement-min-opt-poster-00001.jpg&quot;)" muted="" playsinline=""
+                    data-wf-ignore="true" data-object-fit="cover">
+                    <source src="images/video3.mp4" data-wf-ignore="true">
+                    <source src="images/video3.webm" data-wf-ignore="true">
+                  </video></div><img src="images/skill-img-2.jpg" loading="eager"
+                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw"
+                  srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img">
+                  <!-- <video autoplay muted loop>
                     <source src="images/video3.mp4" type="video/mp4">
-                  </video>
+                  </video> -->
                 </div>
               </div>
             </div>
@@ -1347,9 +1369,20 @@
               <div class="text-80 _1 _2">chill and joy</div>
               <div class="frame1 _6">
                 <div class="frame-img1 _4">
-                  <video autoplay muted loop>
+                  <div data-poster-url="videos/movement-min-opt-poster-00001.jpg"
+                  data-video-urls="videos/movement-min-opt-transcode.mp4,videos/movement-min-opt-transcode.webm" data-autoplay="true"
+                  data-loop="true" data-wf-ignore="true" class="gif w-background-video w-background-video-atom">
+                  <video autoplay=""
+                    loop="" style="background-image:url(&quot;videos/movement-min-opt-poster-00001.jpg&quot;)" muted="" playsinline=""
+                    data-wf-ignore="true" data-object-fit="cover">
+                    <source src="images/video4.mp4" data-wf-ignore="true">
+                    <source src="images/video4.webm" data-wf-ignore="true">
+                  </video></div><img src="images/skill-img-2.jpg" loading="eager"
+                  sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 670.7568359375px, 100vw"
+                  srcset="images/skill-img-1-p-500.jpeg 500w, images/skill-img-1.jpg 672w" alt="" class="dd-skill-img">
+                  <!-- <video autoplay muted loop>
                     <source src="images/video4.mp4" type="video/mp4">
-                  </video>
+                  </video> -->
                 </div>
               </div>
             </div>
